--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/style.css">
+	<script src="https://kit.fontawesome.com/b8fcb94291.js" crossorigin="anonymous"></script>
 
 	<title>Assignment009ca</title>
 </head>
@@ -40,6 +41,8 @@
 		</div>
 
 		<div class="row">
+			<div class="arrow-left"><i class="fa-solid fa-arrow-left"></i></div>
+			<div class="arrow-right"><i class="fa-solid fa-arrow-right"></i></div>
 			<div class="columnthree"><img src="IMG/JinxPurpleEyesEdited.png"></div>
 			<div class="columnthree"><h2>title</h2><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita consequuntur delectus corrupti. Error illo voluptas asperiores pariatur minima illum amet labore? Tempora a rem, vel maxime harum veniam quod illum?
 			Quibusdam mollitia porro est quam alias perspiciatis enim dolorum iste ut eligendi repellat voluptatem quas in, dignissimos laborum repudiandae iusto aperiam magni rerum voluptatibus sit, sapiente ad itaque impedit? Maxime.</p></div>
