--- a/index.html
+++ b/index.html
@@ -24,50 +24,50 @@
 		<div id="rowone">
 			<main>
 				<section class="paragraph">
-					<h2>Title</h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure harum ullam, qui rerum consectetur similique modi odit suscipit quibusdam voluptatem incidunt, provident mollitia facilis fuga velit, temporibus ad nam assumenda.
-					Doloribus quas doloremque corrupti adipisci? Maiores doloribus dolorem odit placeat cumque, distinctio unde, similique ducimus inventore adipisci impedit neque harum, reprehenderit hic. Aut ipsa nobis laboriosam quaerat. Odio, asperiores impedit.
-					Optio earum, at non molestiae nihil accusamus cumque mollitia repellat quisquam voluptatum ex ipsum quaerat? Est temporibus officia inventore perspiciatis eligendi quos quam eos, molestiae, ex minima a nesciunt quo.
-					Dolorum, vitae nihil sit beatae soluta quos dolores consectetur, aliquid nulla laborum quia incidunt iure dicta aliquam placeat voluptas porro repudiandae nam numquam dolorem doloremque sapiente minima. Commodi, quos deleniti.
-					Veritatis quis, quas adipisci obcaecati tempora nesciunt sint illum iure assumenda sit atque aspernatur voluptas doloribus labore totam, molestiae pariatur dolore! Quos impedit optio nesciunt labore repellat debitis iusto amet.</p>
+					<h2>A House Divided</h2>
+					<p>Two sisters. Two cities. One discovery that will change the world forever. Based on the world behind League of Legends, Arcane dives into the delicate balance between the rich, utopian city of Piltover and the seedy, oppressed underground of Zaun, unrest stirs as inventors and thieves, politicians and crime lords chafe against the constraints of a society torn asunder. As dissent reaches a fever pitch, two sisters steal an artifact of untold power. Discovery and danger intertwine as heroes are born and bonds are broken. Will this power change the world, or lead it to ruin? This is the world of Arcane. The story follows the origins of two iconic League champions-and the power that will tear them apart. Like the game on which it is based, Arcane is aimed at a "16+" audience and will deal with some more adult subject matter.</p>
 				</section>
 			</main>
 		</div>
 		
 		<div class="rowtwo">
 			<section class="columnone">
-				<h2>title</h2>
-				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita consequuntur delectus corrupti. Error illo voluptas asperiores pariatur minima illum amet labore? Tempora a rem, vel maxime harum veniam quod illum?
-				Quibusdam mollitia porro est quam alias perspiciatis enim dolorum iste ut eligendi repellat voluptatem quas in, dignissimos laborum repudiandae iusto aperiam magni rerum voluptatibus sit, sapiente ad itaque impedit? Maxime.</p>
-			</section>
+				<h2>Arcane: League of Legends</h2>
+				<p>Arcane is an animated action-adventure streaming television series created by Christian Linke and Alex Yee. Produced by the French animation studio fortiche under the supervision of Riot Games and distributed by Netflix, it is set in Riot's League of Legends fictional universe, and primarily focuses on sister Vi and Jinx. Following the conclusion of the first season, Riot Games and Netflix announced that a second season was in production for a post-2022 release. Arcane's first season was released to critical acclaim, with praise directed at its animation, story, worldbuilding, action sequences, character, emotional weight, music and voice acting. Some have noted the series' appeal both to casual viewers who have never played League of Legends and to long-time fans of the game. It also set the record as Netflix's highest-rated series so far within a week of its premiere, ranked first on the Netflix top 10 Chart in 52 countries, and ranked second on the chart in the United States.</p>
+	
+				</section>
 			<div class="columntwo">
 				<iframe class="video" src="https://www.youtube.com/embed/4Ps6nV4wiCE" alt="Arcane Trailer Video" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 		</div>
 
+		<div class="text-above"><h2>Character Bios</h2></div>
+
 		<div class="row">
 			<div class="arrow-left"><i class="fa-solid fa-arrow-left"></i></div>
 			<div class="arrow-right"><i class="fa-solid fa-arrow-right"></i></div>
+			<!--Future Character Bio Slider-->
 			<div class="columnthree"><img src="IMG/JinxPurpleEyesEdited.png" alt=""></div>
 			<div class="columnthree">
-				<h2>title</h2>
-				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita consequuntur delectus corrupti. Error illo voluptas asperiores pariatur minima illum amet labore? Tempora a rem, vel maxime harum veniam quod illum?
-				Quibusdam mollitia porro est quam alias perspiciatis enim dolorum iste ut eligendi repellat voluptatem quas in, dignissimos laborum repudiandae iusto aperiam magni rerum voluptatibus sit, sapiente ad itaque impedit? Maxime.</p>
+				<h2 id="bio">Jinx</h2>
+				<h3>The Loose Cannon</h3>
+				<p>Jinx, born as Powder, is a notorious Zaunite criminal and Vi's younger sister. When she was a little girl, her parents were killed in a failed uprising against Piltover, leading Vander, the upspoken leader of the undercity, to adopt both her and Vi as his own daughters. After a series of events forced Jinx and her sister apart in more ways than one, she was fundemantally and irrevocably changed, transforming her into the demented killer she is today.</p>
 			</div>
 		</div>
 
 		<div class="rowtwo">
 			<section class="columnone">
-				<h2>title</h2>
-				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita consequuntur delectus corrupti. Error illo voluptas asperiores pariatur minima illum amet labore? Tempora a rem, vel maxime harum veniam quod illum?
-				Quibusdam mollitia porro est quam alias perspiciatis enim dolorum iste ut eligendi repellat voluptatem quas in, dignissimos laborum repudiandae iusto aperiam magni rerum voluptatibus sit, sapiente ad itaque impedit? Maxime.</p>
+				<h2 id="music">Enemy - Imagine Dragons & J.I.D</h2>
+				<p>Of course, "Enemy" sees Dan Reynolds buoyantly delivers thought-provoking lyrics, but the song, which was written for the animated series League of Legends: Arcane, is also anchored by Grammy-nominated rapper J.I.D's verse, giving it a hip-hop vibe. “‘Enemy’ is about reconciling internal conflict in a world where it feels impossible to trust even yourself,” Reynolds explained. “In Arcane, two sisters' lives take them on different paths and leads to a division that threatens to tear an entire city apart. Like the series, the song is meant to be both personal and a critique of a society that seems intent on creating division.”</p>
 			</section>
 			<div class="columntwo">
 				<iframe class="video" src="https://www.youtube.com/embed/F5tSoaJ93ac" alt="Arcane Enemy Music Video" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 		</div>
 
-		<div class="rowcarousel">
+		<div class="text-above"><h2>Favorite Scenes</h2></div>
+
+		<div class="rowcarousel"> <!--Future Carousel-->
 			<section class="columnsix"><img src="Img/JinxCaitlyn.png" alt=""></section>
 			<section class="columnsix"><img src="Img/PowderExplosion.png" alt=""></section>
 			<section class="columnsix"><img src="IMG/JinxPunch.png" alt=""></section>
