index.html img style.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="./css/style.css">
 	<script src="https://kit.fontawesome.com/b8fcb94291.js" crossorigin="anonymous"></script>
 
-	<title>Assignment009ca</title>
+	<title>Arcane</title>
 </head>
 
 <body>
@@ -17,9 +17,11 @@
 			<ul>
                 <li class="nav"><a href="#contact">Contact</a></li>
                 <li class="nav"><a href="#about">About</a></li>
+				<li class="nav"><a href="#home">Home</a></li>
+				<li style="float:left"><a href="index.html"><img id="logo" src="IMG/ArcaneTitle.png" alt="Arcane title"></a></li>
             </ul>
 		</nav>
-		<header id="pageheader"><img src="Img/JinxVi.jpg"></header>
+		<header id="pageheader"><img src="Img/JinxVi.jpg" alt="Jinx vs Vi"></header>
 			
 		<div id="rowone">
 			<main>
@@ -47,7 +49,7 @@
 			<div class="arrow-left"><i class="fa-solid fa-arrow-left"></i></div>
 			<div class="arrow-right"><i class="fa-solid fa-arrow-right"></i></div>
 			<!--Future Character Bio Slider-->
-			<div class="columnthree"><img src="IMG/JinxPurpleEyesEdited.png" alt=""></div>
+			<div class="columnthree"><img src="IMG/JinxPurpleEyesEdited.png" alt="Jinx with purple glowing eyes"></div>
 			<div class="columnthree">
 				<h2 id="bio">Jinx</h2>
 				<h3>The Loose Cannon</h3>
@@ -68,10 +70,10 @@
 		<div class="text-above"><h2>Favorite Scenes</h2></div>
 
 		<div class="rowcarousel"> <!--Future Carousel-->
-			<section class="columnsix"><img src="Img/JinxCaitlyn.png" alt=""></section>
-			<section class="columnsix"><img src="Img/PowderExplosion.png" alt=""></section>
-			<section class="columnsix"><img src="IMG/JinxPunch.png" alt=""></section>
-			<section class="columnsix"><img src="IMG/ZaunVi.png" alt=""></section>
+			<section class="columnsix"><img src="Img/JinxCaitlyn.png" alt="Jinx Caitlyn monkey drawing"></section>
+			<section class="columnsix"><img src="Img/PowderExplosion.png" alt="Jinx explosion fall"></section>
+			<section class="columnsix"><img src="IMG/JinxPunch.png" alt="Jinx punch"></section>
+			<section class="columnsix"><img src="IMG/ZaunVi.png" alt="Vi looking over Zaun"></section>
 		</div>
 		
 		<footer id="pagefooter">Footer|<a href="mailto:abrilramirez310@gmail.com" target="_blank">abrilramirez310@gmail.com</a></footer>
