index.html about.html style.css IMG

--- a/index.html
+++ b/index.html
@@ -13,70 +13,86 @@
 
 <body>
 	
-		<nav id="topnav">
-			<ul>
-                <li class="nav"><a href="#contact">Contact</a></li>
-                <li class="nav"><a href="#about">About</a></li>
-				<li class="nav"><a href="#home">Home</a></li>
-				<li style="float:left"><a href="index.html"><img id="logo" src="IMG/ArcaneTitle.png" alt="Arcane title"></a></li>
-            </ul>
-		</nav>
-		<header id="pageheader"><img src="Img/JinxVi.jpg" alt="Jinx vs Vi"></header>
+	<nav id="topnav">
+		<ul>
+            <li class="nav"><a href="#contact">Contact</a></li>
+            <li class="nav"><a href="about.html">About</a></li>
+			<li class="nav"><a href="index.html">Home</a></li>
+			<li style="float:left"><a href="index.html"><img id="logo" src="IMG/ArcaneTitle.png" alt="Arcane title"></a></li>
+        </ul>
+	</nav>
+
+	<header id="pageheader">
+		<img src="Img/JinxVi.jpg" alt="Jinx vs Vi">
+	</header>
 			
-		<div id="rowone">
-			<main>
-				<section class="paragraph">
-					<h2>A House Divided</h2>
-					<p>Two sisters. Two cities. One discovery that will change the world forever. Based on the world behind League of Legends, Arcane dives into the delicate balance between the rich, utopian city of Piltover and the seedy, oppressed underground of Zaun, unrest stirs as inventors and thieves, politicians and crime lords chafe against the constraints of a society torn asunder. As dissent reaches a fever pitch, two sisters steal an artifact of untold power. Discovery and danger intertwine as heroes are born and bonds are broken. Will this power change the world, or lead it to ruin? This is the world of Arcane. The story follows the origins of two iconic League champions-and the power that will tear them apart. Like the game on which it is based, Arcane is aimed at a "16+" audience and will deal with some more adult subject matter.</p>
-				</section>
-			</main>
-		</div>
-		
-		<div class="rowtwo">
-			<section class="columnone">
-				<h2>Arcane: League of Legends</h2>
-				<p>Arcane is an animated action-adventure streaming television series created by Christian Linke and Alex Yee. Produced by the French animation studio fortiche under the supervision of Riot Games and distributed by Netflix, it is set in Riot's League of Legends fictional universe, and primarily focuses on sister Vi and Jinx. Following the conclusion of the first season, Riot Games and Netflix announced that a second season was in production for a post-2022 release. Arcane's first season was released to critical acclaim, with praise directed at its animation, story, worldbuilding, action sequences, character, emotional weight, music and voice acting. Some have noted the series' appeal both to casual viewers who have never played League of Legends and to long-time fans of the game. It also set the record as Netflix's highest-rated series so far within a week of its premiere, ranked first on the Netflix top 10 Chart in 52 countries, and ranked second on the chart in the United States.</p>
-	
-				</section>
-			<div class="columntwo">
-				<iframe class="video" src="https://www.youtube.com/embed/4Ps6nV4wiCE" alt="Arcane Trailer Video" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
-		</div>
-
-		<div class="text-above"><h2>Character Bios</h2></div>
-
-		<div class="row">
-			<div class="arrow-left"><i class="fa-solid fa-arrow-left"></i></div>
-			<div class="arrow-right"><i class="fa-solid fa-arrow-right"></i></div>
-			<!--Future Character Bio Slider-->
-			<div class="columnthree"><img src="IMG/JinxPurpleEyesEdited.png" alt="Jinx with purple glowing eyes"></div>
-			<div class="columnthree">
-				<h2 id="bio">Jinx</h2>
-				<h3>The Loose Cannon</h3>
-				<p>Jinx, born as Powder, is a notorious Zaunite criminal and Vi's younger sister. When she was a little girl, her parents were killed in a failed uprising against Piltover, leading Vander, the upspoken leader of the undercity, to adopt both her and Vi as his own daughters. After a series of events forced Jinx and her sister apart in more ways than one, she was fundemantally and irrevocably changed, transforming her into the demented killer she is today.</p>
-			</div>
-		</div>
-
-		<div class="rowtwo">
-			<section class="columnone">
-				<h2 id="music">Enemy - Imagine Dragons & J.I.D</h2>
-				<p>Of course, "Enemy" sees Dan Reynolds buoyantly delivers thought-provoking lyrics, but the song, which was written for the animated series League of Legends: Arcane, is also anchored by Grammy-nominated rapper J.I.D's verse, giving it a hip-hop vibe. “‘Enemy’ is about reconciling internal conflict in a world where it feels impossible to trust even yourself,” Reynolds explained. “In Arcane, two sisters' lives take them on different paths and leads to a division that threatens to tear an entire city apart. Like the series, the song is meant to be both personal and a critique of a society that seems intent on creating division.”</p>
+	<div id="rowone">
+		<main>
+			<section class="paragraph">
+				<h2>A House Divided</h2>
+				<p>Two sisters. Two cities. One discovery that will change the world forever. Based on the world behind League of Legends, Arcane dives into the delicate balance between the rich, utopian city of Piltover and the seedy, oppressed underground of Zaun, unrest stirs as inventors and thieves, politicians and crime lords chafe against the constraints of a society torn asunder. As dissent reaches a fever pitch, two sisters steal an artifact of untold power. Discovery and danger intertwine as heroes are born and bonds are broken. Will this power change the world, or lead it to ruin? This is the world of Arcane. The story follows the origins of two iconic League champions-and the power that will tear them apart. Like the game on which it is based, Arcane is aimed at a "16+" audience and will deal with some more adult subject matter.</p>
 			</section>
-			<div class="columntwo">
-				<iframe class="video" src="https://www.youtube.com/embed/F5tSoaJ93ac" alt="Arcane Enemy Music Video" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
-		</div>
-
-		<div class="text-above"><h2>Favorite Scenes</h2></div>
-
-		<div class="rowcarousel"> <!--Future Carousel-->
-			<section class="columnsix"><img src="Img/JinxCaitlyn.png" alt="Jinx Caitlyn monkey drawing"></section>
-			<section class="columnsix"><img src="Img/PowderExplosion.png" alt="Jinx explosion fall"></section>
-			<section class="columnsix"><img src="IMG/JinxPunch.png" alt="Jinx punch"></section>
-			<section class="columnsix"><img src="IMG/ZaunVi.png" alt="Vi looking over Zaun"></section>
-		</div>
+		</main>
+	</div>
 		
-		<footer id="pagefooter">Footer|<a href="mailto:abrilramirez310@gmail.com" target="_blank">abrilramirez310@gmail.com</a></footer>
+	<div class="rowtwo">
+		<section class="columnone">
+			<h2>Arcane: League of Legends</h2>
+			<p>Arcane is an animated action-adventure streaming television series created by Christian Linke and Alex Yee. Produced by the French animation studio fortiche under the supervision of Riot Games and distributed by Netflix, it is set in Riot's League of Legends fictional universe, and primarily focuses on sister Vi and Jinx. Following the conclusion of the first season, Riot Games and Netflix announced that a second season was in production for a post-2022 release. Arcane's first season was released to critical acclaim, with praise directed at its animation, story, worldbuilding, action sequences, character, emotional weight, music and voice acting. Some have noted the series' appeal both to casual viewers who have never played League of Legends and to long-time fans of the game. It also set the record as Netflix's highest-rated series so far within a week of its premiere, ranked first on the Netflix top 10 Chart in 52 countries, and ranked second on the chart in the United States.</p>
+		</section>
+		<div class="columntwo">
+			<iframe class="embed" src="https://www.youtube.com/embed/4Ps6nV4wiCE" alt="Arcane Trailer Video" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+	</div>
+
+	<div class="text-above"><h2>Character Bios</h2></div>
+
+	<div class="row">
+		<div class="arrow-left">
+			<i class="fa-solid fa-arrow-left"></i>
+		</div>
+		<div class="arrow-right">
+			<i class="fa-solid fa-arrow-right"></i>
+		</div>
+		<!--Future Character Bio Slider-->
+		<div class="columnthree">
+			<img src="IMG/JinxPurpleEyesEdited.png" alt="Jinx with purple glowing eyes">
+		</div>
+		<div class="columnthree">
+			<h2 id="bio">Jinx</h2>
+			<h3>The Loose Cannon</h3>
+			<p>Jinx, born as Powder, is a notorious Zaunite criminal and Vi's younger sister. When she was a little girl, her parents were killed in a failed uprising against Piltover, leading Vander, the upspoken leader of the undercity, to adopt both her and Vi as his own daughters. After a series of events forced Jinx and her sister apart in more ways than one, she was fundemantally and irrevocably changed, transforming her into the demented killer she is today.</p>
+		</div>
+	</div>
+
+	<div class="rowtwo">
+		<section class="columnone">
+			<h2 id="music">Enemy - Imagine Dragons & J.I.D</h2>
+			<p>Of course, "Enemy" sees Dan Reynolds buoyantly delivers thought-provoking lyrics, but the song, which was written for the animated series League of Legends: Arcane, is also anchored by Grammy-nominated rapper J.I.D's verse, giving it a hip-hop vibe. “‘Enemy’ is about reconciling internal conflict in a world where it feels impossible to trust even yourself,” Reynolds explained. “In Arcane, two sisters' lives take them on different paths and leads to a division that threatens to tear an entire city apart. Like the series, the song is meant to be both personal and a critique of a society that seems intent on creating division.”</p>
+		</section>
+		<div class="columntwo">
+			<iframe class="embed" src="https://www.youtube.com/embed/F5tSoaJ93ac" alt="Arcane Enemy Music Video" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+	</div>
+
+	<div class="text-above"><h2>Favorite Scenes</h2></div>
+
+	<div class="rowcarousel"> <!--Future Carousel-->
+		<section class="columnsix">
+			<img src="Img/JinxCaitlyn.png" alt="Jinx Caitlyn monkey drawing">
+		</section>
+		<section class="columnsix">
+			<img src="Img/PowderExplosion.png" alt="Jinx explosion fall">
+		</section>
+		<section class="columnsix">
+			<img src="IMG/JinxPunch.png" alt="Jinx punch">
+		</section>
+		<section class="columnsix">
+			<img src="IMG/ZaunVi.png" alt="Vi looking over Zaun">
+		</section>
+	</div>
+		
+	<footer id="pagefooter">Footer|<a href="mailto:abrilramirez310@gmail.com" target="_blank">abrilramirez310@gmail.com</a></footer>
 	
 </body>
 </html>
