index.html about.html style.css

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<p>Arcane is an animated action-adventure streaming television series created by Christian Linke and Alex Yee. Produced by the French animation studio fortiche under the supervision of Riot Games and distributed by Netflix, it is set in Riot's League of Legends fictional universe, and primarily focuses on sister Vi and Jinx. Following the conclusion of the first season, Riot Games and Netflix announced that a second season was in production for a post-2022 release. Arcane's first season was released to critical acclaim, with praise directed at its animation, story, worldbuilding, action sequences, character, emotional weight, music and voice acting. Some have noted the series' appeal both to casual viewers who have never played League of Legends and to long-time fans of the game. It also set the record as Netflix's highest-rated series so far within a week of its premiere, ranked first on the Netflix top 10 Chart in 52 countries, and ranked second on the chart in the United States.</p>
 		</section>
 		<div class="columntwo">
-			<iframe class="embed" src="https://www.youtube.com/embed/4Ps6nV4wiCE" alt="Arcane Trailer Video" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe class="embed" src="https://www.youtube.com/embed/4Ps6nV4wiCE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 	</div>
 
@@ -71,7 +71,7 @@
 			<p>Of course, "Enemy" sees Dan Reynolds buoyantly delivers thought-provoking lyrics, but the song, which was written for the animated series League of Legends: Arcane, is also anchored by Grammy-nominated rapper J.I.D's verse, giving it a hip-hop vibe. “‘Enemy’ is about reconciling internal conflict in a world where it feels impossible to trust even yourself,” Reynolds explained. “In Arcane, two sisters' lives take them on different paths and leads to a division that threatens to tear an entire city apart. Like the series, the song is meant to be both personal and a critique of a society that seems intent on creating division.”</p>
 		</section>
 		<div class="columntwo">
-			<iframe class="embed" src="https://www.youtube.com/embed/F5tSoaJ93ac" alt="Arcane Enemy Music Video" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe class="embed" src="https://www.youtube.com/embed/F5tSoaJ93ac" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 	</div>
 
@@ -79,20 +79,30 @@
 
 	<div class="rowcarousel"> <!--Future Carousel-->
 		<section class="columnsix">
-			<img src="Img/JinxCaitlyn.png" alt="Jinx Caitlyn monkey drawing">
+			<a href="https://www.youtube.com/watch?v=FXVtzYuSN7o&ab_channel=Deamon" target="_blank">
+				<img src="Img/JinxCaitlyn.png" alt="Jinx Caitlyn monkey drawing">
+			</a>
+			</section>
+		<section class="columnsix">
+			<a href="https://www.youtube.com/watch?v=Tz1THyAhx8E&ab_channel=Dray" target="_blank">
+				<img src="Img/PowderExplosion.png" alt="Jinx explosion fall">
+			</a>
 		</section>
 		<section class="columnsix">
-			<img src="Img/PowderExplosion.png" alt="Jinx explosion fall">
+			<a href="https://www.youtube.com/watch?v=zP7AGWiw8Uw&ab_channel=LeagueofLegendshttps://www.youtube.com/watch?v=6M3LjMNCiZY&ab_channel=MalachiBloodII" target="_blank">
+				<img src="IMG/JinxPunch.png" alt="Jinx punch">
+			</a>
 		</section>
 		<section class="columnsix">
-			<img src="IMG/JinxPunch.png" alt="Jinx punch">
-		</section>
-		<section class="columnsix">
-			<img src="IMG/ZaunVi.png" alt="Vi looking over Zaun">
+			<a href="https://www.youtube.com/watch?v=6M3LjMNCiZY&ab_channel=MalachiBloodII" target="_blank">
+				<img src="IMG/ZaunVi.png" alt="Vi looking over Zaun">
+			</a>
 		</section>
 	</div>
 		
-	<footer id="pagefooter">Footer|<a href="mailto:abrilramirez310@gmail.com" target="_blank">abrilramirez310@gmail.com</a></footer>
+	<footer id="pagefooter">
+		<a href="mailto:abrilramirez310@gmail.com" target="_blank">abrilramirez310@gmail.com</a>
+	</footer>
 	
 </body>
 </html>
