index.html about.html style.css

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="./css/style.css">
 	<script src="https://kit.fontawesome.com/b8fcb94291.js" crossorigin="anonymous"></script>
 
-	<title>About</title>
+	<title>Arcane</title>
 </head>
 
 <body>
@@ -144,7 +144,10 @@
 			</div>
 		
 	<footer id="pagefooter">
-		<a href="mailto:abrilramirez310@gmail.com" target="_blank">abrilramirez310@gmail.com</a>
+		<a class="socials" href="https://www.discord.com/" target="_blank"><i class="fa-brands fa-discord"></i></a>
+		<a class="socials" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+		<a class="socials" href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+		<a class="socials" href="https://www.twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
 	</footer>
 
 </body>
