--- a/about.html
+++ b/about.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/b8fcb94291.js" crossorigin="anonymous"></script>
 
 	<title>Arcane</title>
@@ -15,7 +18,7 @@
 
 	<nav id="topnav">
 		<ul>
-            <li class="nav"><a href="#contact">Contact</a></li>
+            <li class="nav"><a href="contact.html">Contact</a></li>
             <li class="nav"><a href="about.html">About</a></li>
 			<li class="nav"><a href="index.html">Home</a></li>
 			<li style="float:left"><a href="index.html"><img id="logo" src="IMG/ArcaneTitle.png" alt="Arcane title"></a></li>
@@ -32,7 +35,7 @@
 		<section class="columnseven">
             <h2>Arcane Creators</h2>
             <h3>Alex Yee & Christian Linke</h3>
-            <p>It's hard to answer how we did it, but at the end of the day, the most important thing was just to tell a good story, and we felt like a good story wouldn’t require you to come in with knowledge in advance. We spent a lot of time trying to strike a balance of setting up characters and trying to find ways to keep that setup engaging and suspenseful, even though for a lot of players, they’re like, ‘I know where they’re going to wind up.’ As for why we decided to make it more accessible. I think for a lot of us who have played League for a really long time, a lot of our friends and family have no idea what the game's world is. So, we really wanted players to be able to share the world they've been spending so much time in with people around them, and have this way of having a conversation with people outside of the League fandom.</p></section>
+            <p>It's hard to answer how we did it, but at the end of the day, the most important thing was just to tell a good story, and we felt like a good story wouldn't require you to come in with knowledge in advance. We spent a lot of time trying to strike a balance of setting up characters and trying to find ways to keep that setup engaging and suspenseful, even though for a lot of players, they're like, 'I know where they're going to wind up.'' As for why we decided to make it more accessible. I think for a lot of us who have played League for a really long time, a lot of our friends and family have no idea what the game's world is. So, we really wanted players to be able to share the world they've been spending so much time in with people around them, and have this way of having a conversation with people outside of the League fandom.</p></section>
 		<section class="columnseven">
 			<img src="IMG/ChristianLinke.png" alt="Christian Linke">
 		</section>
@@ -53,45 +56,49 @@
 	<div class="rowcast">
 		<div class="image-hover-text">
 			<div class="hover-image">
-				<img src="Img/HaileeSteinfield.jpg" alt="">
+				<img src="Img/HaileeSteinfeld.jpg" alt="Hailee Steinfeld">
 			</div>
 			<div class="hover-text">
 				<div class="hover-text-bubble">
-					<span class="hover-text-title">Sample</span>
-					This is a sample.
+					<span class="hover-text-title">Hailee Steinfeld</span>
+					<h3>Vi</h3>
+					<p>Vi is one of the many characters who populate Arcane's disadvantaged Undercity. Voiced by Hailee Steinfeld, she resents growing up in the shadow of Piltover, being seen as trash by their ruling class. After suffering repeated humiliations at the hands of Piltovers, Vi wishes to fight them so that her younger sister and the rest of the Undercity can prosper. As time passes and the sources of the Undercity's problems become more complex, so does Vi's mission.</p>
 				</div>
 			</div>
 		</div>
 		<div class="image-hover-text">
 			<div class="hover-image">
-				<img src="Img/EllaPurnell.jpg" alt="">
+				<img src="Img/EllaPurnell.jpg" alt="Ella Purnell">
 			</div>
 			<div class="hover-text">
 				<div class="hover-text-bubble">
-					<span class="hover-text-title">Sample</span>
-					This is a sample.
+					<span class="hover-text-title">Ella Purnell</span>
+					<h3>Jinx</h3>
+					<p>One character that the creators knew would be challenging to portray is marksman Jinx because she has a distinct, wild Harley Quinn personality that comes off strongly in-game. Alex was particularly impressed with Ella Purnell's performance. “We all know who she is in the game,” he said. “But we really wanted to bring this extra dimension to her to see this subtly and true human behind the big, bright flashy exterior of Jinx, and I think Ella was real fine in that.”</p>
 				</div>
 			</div>
 		</div>
 		<div class="image-hover-text">
 			<div class="hover-image">
-				<img src="Img/KatieLeung.jpg" alt="">
+				<img src="Img/MiaSinclairJenness.jpg" alt="Mia Sinclair Jenness">
 			</div>
 			<div class="hover-text">
 				<div class="hover-text-bubble">
-					<span class="hover-text-title">Sample</span>
-					This is a sample.
+					<span class="hover-text-title">Mia Sinclair Jenness</span>
+					<h3>Powder</h3>
+					<p> The easiest thing about playing Powder for me is how fiercely loyal and loving she is towards her family. For me, the people that I care about come first in my life, 100%. And it's the same thing with Powder, so that was super easy for me. But what was more difficult was the fact that she is so resilient. I think of myself as a pretty resilient person, but Powder is faced with some circumstances that I don't think I would be able to handle. So tapping into that side of myself and thinking about, "If I were in the situation, how would I be reacting?" versus "How would Powder be reacting?" That was definitely a cool learning experience for me.</p>
 				</div>
 			</div>
 		</div>
 		<div class="image-hover-text">
 			<div class="hover-image">
-				<img src="Img/KevinAlejandro.jpg" alt="">
+				<img src="Img/KatieLeung.jpg" alt="Katie Leung">
 			</div>
 			<div class="hover-text">
 				<div class="hover-text-bubble">
-					<span class="hover-text-title">Sample</span>
-					This is a sample.
+					<span class="hover-text-title">Katie Leung</span>
+					<h3>Caitlyn</h3>
+					<p>It seems like Katie Leung was destined to play the role of Caitlyn. She first auditioned for the role in the United Kingdom. “This was my first voice casting and I didn't know what to expect,” Katie Leung shared with ONE Esports. “I remember going up for it in London.” After some time, she received an invitation from Riot Games to do a second interview. She was staying in Los Angeles, California when she got the callback, which was fortunate since the Riot Games headquarters is based in the same city.</p>
 				</div>
 			</div>
 		</div>
@@ -99,45 +106,49 @@
 		<div class="rowcast">
 			<div class="image-hover-text">
 				<div class="hover-image">
-					<img src="Img/HarryLloyd.jpg" alt="">
+					<img src="Img/KevinAlejandro.jpg" alt="Kevin Alejandro">
 				</div>
 				<div class="hover-text">
 					<div class="hover-text-bubble">
-						<span class="hover-text-title">Sample</span>
-						This is a sample.
+						<span class="hover-text-title">Kevin Alejandro</span>
+						<h3>Jayce</h3>
+						<p>"I went for the role of Jayce, like that was it," Kevin said. "Coming from a working class background and rising up to help Piltover, to help his friends, to help the people that surround him...I could understand that journey. I just loved Jayce's entire emotional arc and was like that's my guy, that's who I want to be."</p>
 					</div>
 				</div>
 			</div>
 			<div class="image-hover-text">
 				<div class="hover-image">
-					<img src="Img/JasonSpisak.jpg" alt="">
+					<img src="Img/HarryLloyd.jpg" alt="Harry Lloyd">
 				</div>
 				<div class="hover-text">
 					<div class="hover-text-bubble">
-						<span class="hover-text-title">Sample</span>
-						This is a sample.
+						<span class="hover-text-title">Harry Lloyd</span>
+						<h3>Viktor</h3>
+						<p>"I did get more and more into the whole folklore and reading kind of fantasy stories and stuff about Viktor specifically, because his whole story and his mysterious backstory already had quite a lot of different versions already out there. So I was definitely interested in that, more out of curiosity than anything that I think would directly affect how we were doing it."</p>
 					</div>
 				</div>
 			</div>
 			<div class="image-hover-text">
 				<div class="hover-image">
-					<img src="Img/JBBlanc.jpg" alt="">
+					<img src="Img/JasonSpisak.jpg" alt="Jason Spisak">
 				</div>
 				<div class="hover-text">
 					<div class="hover-text-bubble">
-						<span class="hover-text-title">Sample</span>
-						This is a sample.
+						<span class="hover-text-title">Jason Spisak</span>
+						<h3>Silco</h3>
+						<p>Silco's voice actor Jason Spisak became involved with “Arcane” during its second year of production. At that time, there were absolutely no visual assets for actors to use as a reference, and complications from COVID-19 prevented some of the actors from meeting and recording in person. “I'd never met Ella, the actress who plays Jinx, at all until the premiere,” Spisak said. “It'll blow your noodle when you think about all the scenes we did together and our interactions.”</p>
 					</div>
 				</div>
 			</div>
 			<div class="image-hover-text">
 				<div class="hover-image">
-					<img src="Img/MiaSinclairJenness.jpg" alt="">
+					<img src="Img/JBBlanc.jpg" alt="JB Blanc">
 				</div>
 				<div class="hover-text">
 					<div class="hover-text-bubble">
-						<span class="hover-text-title">Sample</span>
-						This is a sample.
+						<span class="hover-text-title">JB Blanc</span>
+						<h3>Vander</h3>
+						<p>JB Blanc is a French-British actor and director. He portrayed Vander, a former brutal fist fighter whose strength was reserved for the fight of equality between the Undercity and Piltover, who progressed into a widely respected peace-promoter and the adoptive father of sisters Vi and Jinx.</p>
 					</div>
 				</div>
 			</div>
