--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/b8fcb94291.js" crossorigin="anonymous"></script>
 
 	<title>Arcane</title>
@@ -15,7 +18,7 @@
 	
 	<nav id="topnav">
 		<ul>
-            <li class="nav"><a href="#contact">Contact</a></li>
+            <li class="nav"><a href="contact.html">Contact</a></li>
             <li class="nav"><a href="about.html">About</a></li>
 			<li class="nav"><a href="index.html">Home</a></li>
 			<li style="float:left"><a href="index.html"><img id="logo" src="IMG/ArcaneTitle.png" alt="Arcane title"></a></li>
@@ -60,7 +63,7 @@
 		</div>
 		<div class="columnthree">
 			<h2 id="bio">Jinx</h2>
-			<h3>The Loose Cannon</h3>
+			<h3 id="nickname">The Loose Cannon</h3>
 			<p>Jinx, born as Powder, is a notorious Zaunite criminal and Vi's younger sister. When she was a little girl, her parents were killed in a failed uprising against Piltover, leading Vander, the upspoken leader of the undercity, to adopt both her and Vi as his own daughters. After a series of events forced Jinx and her sister apart in more ways than one, she was fundemantally and irrevocably changed, transforming her into the demented killer she is today.</p>
 		</div>
 	</div>
