style.css index.html about.html contact.html img

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/style.css">
+	<!--Raleway Font-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
@@ -24,18 +25,20 @@
 			<li style="float:left"><a href="index.html"><img id="logo" src="IMG/ArcaneTitle.png" alt="Arcane title"></a></li>
         </ul>
 	</nav>
+
 	<header id="pageheader">
 		<img src="Img/JinxVi.jpg" alt="Jinx vs Vi">
 	</header>
 
-    <div class="rowcarousel"> 
+    <div class="rowcreators"> 
 		<section class="columnseven">
 			<img src="Img/AlexYee.png" alt="Alex Yee">
 		</section>
 		<section class="columnseven">
             <h2>Arcane Creators</h2>
             <h3>Alex Yee & Christian Linke</h3>
-            <p>It's hard to answer how we did it, but at the end of the day, the most important thing was just to tell a good story, and we felt like a good story wouldn't require you to come in with knowledge in advance. We spent a lot of time trying to strike a balance of setting up characters and trying to find ways to keep that setup engaging and suspenseful, even though for a lot of players, they're like, 'I know where they're going to wind up.'' As for why we decided to make it more accessible. I think for a lot of us who have played League for a really long time, a lot of our friends and family have no idea what the game's world is. So, we really wanted players to be able to share the world they've been spending so much time in with people around them, and have this way of having a conversation with people outside of the League fandom.</p></section>
+            <p>It's hard to answer how we did it, but at the end of the day, the most important thing was just to tell a good story, and we felt like a good story wouldn't require you to come in with knowledge in advance. We spent a lot of time trying to strike a balance of setting up characters and trying to find ways to keep that setup engaging and suspenseful, even though for a lot of players, they're like, 'I know where they're going to wind up.'' As for why we decided to make it more accessible. I think for a lot of us who have played League for a really long time, a lot of our friends and family have no idea what the game's world is. So, we really wanted players to be able to share the world they've been spending so much time in with people around them, and have this way of having a conversation with people outside of the League fandom.</p>
+		</section>
 		<section class="columnseven">
 			<img src="IMG/ChristianLinke.png" alt="Christian Linke">
 		</section>
@@ -51,7 +54,9 @@
 		</div>
 	</div>
 
-	<div class="text-above"><h2>The Cast</h2></div>
+	<div class="text-above">
+		<h2>The Cast</h2>
+	</div>
 
 	<div class="rowcast">
 		<div class="image-hover-text">
