--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/style.css">
+	<!--Raleway-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+	<!--Finger Paint Font-->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/b8fcb94291.js" crossorigin="anonymous"></script>
 
 	<title>Arcane</title>
@@ -48,23 +53,25 @@
 		</div>
 	</div>
 
-	<div class="text-above"><h2>Character Bios</h2></div>
+	<div class="text-above">
+		<h2>Character Bios</h2>
+	</div>
 
-	<div class="row">
+	<div class="row"> <!--Future Character Bio Slider--> 
 		<div class="arrow-left">
 			<i class="fa-solid fa-arrow-left"></i>
 		</div>
 		<div class="arrow-right">
 			<i class="fa-solid fa-arrow-right"></i>
 		</div>
-		<!--Future Character Bio Slider-->
+	
 		<div class="columnthree">
 			<img src="IMG/JinxPurpleEyesEdited.png" alt="Jinx with purple glowing eyes">
 		</div>
 		<div class="columnthree">
 			<h2 id="bio">Jinx</h2>
 			<h3 id="nickname">The Loose Cannon</h3>
-			<p>Jinx, born as Powder, is a notorious Zaunite criminal and Vi's younger sister. When she was a little girl, her parents were killed in a failed uprising against Piltover, leading Vander, the upspoken leader of the undercity, to adopt both her and Vi as his own daughters. After a series of events forced Jinx and her sister apart in more ways than one, she was fundemantally and irrevocably changed, transforming her into the demented killer she is today.</p>
+			<p id="biodescription">Jinx, born as Powder, is a notorious Zaunite criminal and Vi's younger sister. When she was a little girl, her parents were killed in a failed uprising against Piltover, leading Vander, the upspoken leader of the undercity, to adopt both her and Vi as his own daughters. After a series of events forced Jinx and her sister apart in more ways than one, she was fundemantally and irrevocably changed, transforming her into the demented killer she is today.</p>
 		</div>
 	</div>
 
@@ -78,7 +85,9 @@
 		</div>
 	</div>
 
-	<div class="text-above"><h2>Favorite Scenes</h2></div>
+	<div class="text-above">
+		<h2>Favorite Scenes</h2>
+	</div>
 
 	<div class="rowcarousel"> <!--Future Carousel-->
 		<section class="columnsix">
