index.html about.html contact.html style.css css img

--- a/about.html
+++ b/about.html
@@ -22,7 +22,8 @@
             <li class="nav"><a href="contact.html">Contact</a></li>
             <li class="nav"><a href="about.html">About</a></li>
 			<li class="nav"><a href="index.html">Home</a></li>
-			<li style="float:left"><a href="index.html"><img id="logo" src="IMG/ArcaneTitle.png" alt="Arcane title"></a></li>
+			<li style="float:left"><a href="index.html"><img id="arcanetitle" src="IMG/ArcaneTitle.png" alt="Arcane title"></a></li>
+        <!--<li style="float:left"><a href="index.html"><img id="logo" src="IMG/Logo.png" alt="Logo"></a></li>-->
         </ul>
 	</nav>
 
