--- a/about.html
+++ b/about.html
@@ -28,12 +28,12 @@
 	</nav>
 
 	<header id="pageheader">
-		<img src="Img/JinxVi.jpg" alt="Jinx vs Vi">
+		<img src="IMG/JinxVi.jpg" alt="Jinx vs Vi">
 	</header>
 
     <div class="rowcreators"> 
 		<section class="columnseven">
-			<img src="Img/AlexYee.png" alt="Alex Yee">
+			<img src="IMG/AlexYee.png" alt="Alex Yee">
 		</section>
 		<section class="columnseven">
             <h2>Arcane Creators</h2>
@@ -62,7 +62,7 @@
 	<div class="rowcast">
 		<div class="image-hover-text">
 			<div class="hover-image">
-				<img src="Img/HaileeSteinfeld.jpg" alt="Hailee Steinfeld">
+				<img src="IMG/HaileeSteinfeld.jpg" alt="Hailee Steinfeld">
 			</div>
 			<div class="hover-text">
 				<div class="hover-text-bubble">
@@ -74,7 +74,7 @@
 		</div>
 		<div class="image-hover-text">
 			<div class="hover-image">
-				<img src="Img/EllaPurnell.jpg" alt="Ella Purnell">
+				<img src="IMG/EllaPurnell.jpg" alt="Ella Purnell">
 			</div>
 			<div class="hover-text">
 				<div class="hover-text-bubble">
@@ -86,7 +86,7 @@
 		</div>
 		<div class="image-hover-text">
 			<div class="hover-image">
-				<img src="Img/MiaSinclairJenness.jpg" alt="Mia Sinclair Jenness">
+				<img src="IMG/MiaSinclairJenness.jpg" alt="Mia Sinclair Jenness">
 			</div>
 			<div class="hover-text">
 				<div class="hover-text-bubble">
@@ -98,7 +98,7 @@
 		</div>
 		<div class="image-hover-text">
 			<div class="hover-image">
-				<img src="Img/KatieLeung.jpg" alt="Katie Leung">
+				<img src="IMG/KatieLeung.jpg" alt="Katie Leung">
 			</div>
 			<div class="hover-text">
 				<div class="hover-text-bubble">
@@ -112,7 +112,7 @@
 		<div class="rowcast">
 			<div class="image-hover-text">
 				<div class="hover-image">
-					<img src="Img/KevinAlejandro.jpg" alt="Kevin Alejandro">
+					<img src="IMG/KevinAlejandro.jpg" alt="Kevin Alejandro">
 				</div>
 				<div class="hover-text">
 					<div class="hover-text-bubble">
@@ -124,7 +124,7 @@
 			</div>
 			<div class="image-hover-text">
 				<div class="hover-image">
-					<img src="Img/HarryLloyd.jpg" alt="Harry Lloyd">
+					<img src="IMG/HarryLloyd.jpg" alt="Harry Lloyd">
 				</div>
 				<div class="hover-text">
 					<div class="hover-text-bubble">
@@ -136,7 +136,7 @@
 			</div>
 			<div class="image-hover-text">
 				<div class="hover-image">
-					<img src="Img/JasonSpisak.jpg" alt="Jason Spisak">
+					<img src="IMG/JasonSpisak.jpg" alt="Jason Spisak">
 				</div>
 				<div class="hover-text">
 					<div class="hover-text-bubble">
@@ -148,7 +148,7 @@
 			</div>
 			<div class="image-hover-text">
 				<div class="hover-image">
-					<img src="Img/JBBlanc.jpg" alt="JB Blanc">
+					<img src="IMG/JBBlanc.jpg" alt="JB Blanc">
 				</div>
 				<div class="hover-text">
 					<div class="hover-text-bubble">
