--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 	</nav>
 
 	<header id="pageheader">
-		<img src="Img/JinxVi.jpg" alt="Jinx vs Vi">
+		<img src="IMG/JinxVi.jpg" alt="Jinx vs Vi">
 	</header>
 
     <div class="text-above">
