--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	</nav>
 
 	<header id="pageheader">
-		<img src="Img/JinxVi.jpg" alt="Jinx vs Vi">
+		<img src="IMG/JinxVi.jpg" alt="Jinx vs Vi">
 	</header>
 			
 	<div id="rowone">
@@ -93,12 +93,12 @@
 	<div class="rowcarousel"> <!--Future Carousel-->
 		<section class="columnsix">
 			<a href="https://www.youtube.com/watch?v=FXVtzYuSN7o&ab_channel=Deamon" target="_blank">
-				<img src="Img/JinxCaitlyn.png" alt="Jinx Caitlyn monkey drawing">
+				<img src="IMG/JinxCaitlyn.png" alt="Jinx Caitlyn monkey drawing">
 			</a>
 			</section>
 		<section class="columnsix">
 			<a href="https://www.youtube.com/watch?v=Tz1THyAhx8E&ab_channel=Dray" target="_blank">
-				<img src="Img/PowderExplosion.png" alt="Jinx explosion fall">
+				<img src="IMG/PowderExplosion.png" alt="Jinx explosion fall">
 			</a>
 		</section>
 		<section class="columnsix">
